syntax = "proto3";

option csharp_namespace = "XCart.Order.Grpc.Protos";


service OrderProtoService {
	rpc PlaceOrder (PlaceOrderRequest) returns (ReplyModel);
	rpc UpdateOrder (UpdateOrderRequest) returns (ReplyModel);
}

message PlaceOrderRequest{
        string customerId = 1;
		repeated int32 productIds = 2;
}

message UpdateOrderRequest {
	string customerId = 1;
	repeated int32 productIds = 2;
	string orderId = 3;
}

message ReplyModel {
	bool isSuccess = 1; 
	string message = 2;
}