syntax = "proto3";

option csharp_namespace = "XCart.Product.Grpc.Protos";

service ProductProtoService {
    rpc GetProducts (Params) returns (Products);
    rpc CreateOrder (PlaceOrderRequest) returns (ReplyModel);    
    rpc UpdateOrder (UpdateOrderRequest) returns (ReplyModel);  
}

message Params {}


message Products {
    repeated Product products = 1;
}

message Product {
    int32 productId = 1;
    string name = 2;
    double price = 3;
    string color = 4;
    int32  quantity = 5;
}

message PlaceOrderRequest {
    string customerId = 1;
    repeated Product products = 2;
}

message UpdateOrderRequest {
    string customerId = 1;
    string orderId = 2;
    repeated Product products = 3;
}

message ReplyModel{
    string message = 1;
}
